# Perceptron

./: CMakeLists.txt  format_csv.py  main.cpp  perceptron.cpp  perceptron.h
data/titanic/: test.txt  train.txt
